idf_component_register(SRCS "resources/img/background_houses.c" "resources/img/flappy1.c" "resources/img/flappy2.c" 
                            "resources/img/flappy3.c" "usb_hid_host.c" "Main.cpp" "GameScreen.cpp" "FlappyBird.cpp"
                            "resources/img/flappy1_rotated.c" "resources/img/flappy2_rotated.c" "resources/img/flappy3_rotated.c"
                            "resources/img/pipe_top.c" "resources/img/pipe_bottom.c"
                    INCLUDE_DIRS "")
